# grink

./: Cargo.toml  README.md  deny.toml
.github/workflows/: audit.yml
src/: lib.rs  main.rs
tests/: cli.rs  ignore.txt  test.md
tests/data/: haystack.md
