[package]
name = "grink"
version = "0.2.0"
authors = ["John Arundel <john@bitfieldconsulting.com>"]
edition = "2021"
description = """
Grink is a tool to find and check web links in text files.
"""
keywords = ["web", "cli", "utility", "text"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/grink"
homepage = "https://github.com/bitfield/grink"
repository = "https://github.com/bitfield/grink"
exclude = ["/.github/"]

[badges]
github = { repository = "bitfield/grink", workflow = "CI" }
maintenance = { status = "actively-developed" }

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.23", features = ["derive"] }
regex = "1.10.5"
reqwest = "0.12.5"
tokio = { version = "1.44.2", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tempfile = "3.10.1"
